[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmlogger"
version = "0.0.1"
description = "Lightweight Python logger with colored output, rotating file logging, and optional async queue logging."
readme = "readme.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Ps394" }
]
keywords = ["logging", "logger", "colored-output", "rotating-file-handler", "async-logging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Ps394/hmlogger"
Repository = "https://github.com/Ps394/hmlogger"
Issues = "https://github.com/Ps394/hmlogger/issues"

[tool.setuptools]
packages = ["HmLogger"]
include-package-data = false
